quakeforge (0.5.2-1) frozen unstable; urgency=low

  * New release.
  * This package does not contain the menu file, because it would
    seriously screw up future upgrades. This will be fixed in 0.5.3.
    If you want menus, you'll have to download them from
    www.quakeforge.net for now.

 -- Jeff Teunissen <deek@d2dc.net>  Fri,  1 Oct 2002 02:54:17 -0400

quakeforge (0.5.1-0cvs20020416) frozen unstable; urgency=low

  * New snapshot.

 -- Jeff Teunissen <deek@d2dc.net>  Sat, 16 Apr 2002 04:07:02 -0400

quakeforge (0.5.1-0cvs20011117) frozen unstable; urgency=low

  * New snapshot.

 -- Jeff Teunissen <deek@d2dc.net>  Sat, 17 Nov 2001 18:13:02 -0500

quakeforge (0.5.1-0cvs20011103) frozen unstable; urgency=low

  * New snapshot.

 -- Jeff Teunissen <deek@d2dc.net>  Sat,  3 Nov 2001 16:13:02 -0500

quakeforge (0.5.1-0cvs20011015) frozen unstable; urgency=low

  * New snapshot

 -- Jeff Teunissen <deek@d2dc.net>  Mon, 15 Oct 2001 18:54:39 -0400

quakeforge (0.5.1-0cvs20010912) frozen unstable; urgency=low

  * Change version number to be closer to CVS
  * Lots of changes, all new packaging.
  
 -- Jeff Teunissen <deek@d2dc.net>  Wed, 12 Sep 2001 09:59:04 -0400

quakeforge (0.2.99beta6-0) frozen unstable; urgency=low

  * New upstream version

 -- Jeff Teunissen <deek@dusknet.dhs.org>  Tue, 14 Nov 2000 03:28:03 -0500

quakeforge (0.2.99alpha0-1) frozen unstable; urgency=low

  * New upstream release
  * New maintainer
  * uquake-* targets dropped upstream, to be re-added in new package
  * New package quakeforge-common contains quakeforge.conf conffile

 -- Jeff Teunissen <deek@dusknet.dhs.org>  Tue, 14 Nov 2000 03:26:04 -0500

quakeforge (0.2-20000308-1) frozen unstable; urgency=low

  * Unstable CVS snapshot
  * quake-* binaries are now named uquake-*
  * -gl targets are now more properly named -glx
  * Some minor annoyances with the status bar fixed in 0.1.1 have not been
    fixed in 0.2-d yet.  You won't see them, unless you play hip/rogue and