@@ -1,17 +1,16 @@
 // QuakeForge Configuration
 
 // Location of shared data
-setrom fs_sharepath "/usr/share/games/quake"
+set fs_sharepath "/usr/share/games/quake"
 
 // Location of user's personal data
-setrom fs_userpath "~/.quake"
+set fs_userpath "~/.quakeforge"
 
 // CD Audio
 set cd_plugin linux
 
-// Uncomment one of these to choose audio support
-//set snd_output oss
-//set snd_output alsa0_9
+// Digital sound output
+set snd_output default
 
 // Video defaults
 set vid_width 640
